--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    
-    - name: Heroku Awake
-      uses: mikeesto/heroku-awake@1.0.0
-      with:
-        URL: https://primary-snippet-space-frontend.herokuapp.com/
+
+#    - name: Heroku Awake
+#      uses: mikeesto/heroku-awake@1.0.0
+#      with:
+#        URL: https://primary-snippet-space-frontend.herokuapp.com/
