--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/firebase": "^6.1.1",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "firebase": "^7.17.1",
     "firebase-admin": "^9.0.0",
     "nuxt": "^2.0.0"
   },
