--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/firebase": "^6.1.1",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "@octokit/rest": "^18.0.3",
     "firebase": "^7.17.1",
     "firebase-admin": "^9.0.0",
     "nuxt": "^2.0.0"
