--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@octokit/rest": "^18.0.3",
     "firebase": "^7.17.1",
     "firebase-admin": "^9.0.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-embed-gist": "^1.0.2"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0"
